# komari-bot-bertservice

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-prod.txt
.github/workflows/: main.yml
deploy/: README.md
deploy/monitoring/alertmanager/: alertmanager.yml
deploy/monitoring/grafana/provisioning/dashboards/: dashboards.yml
deploy/monitoring/prometheus/: alerts.yml  prometheus.yml
komari-bot-bertservice/app/: config.py  main.py
komari-bot-bertservice/app/api/v1/: endpoints.py  router.py
komari-bot-bertservice/app/middleware/: error_handler.py  metrics.py  rate_limit.py
komari-bot-bertservice/app/models/: schemas.py
komari-bot-bertservice/app/services/: inference_engine.py  tokenizer.py
komari-bot-bertservice/app/utils/: logger.py
komari-bot-bertservice/models/: README.md
komari-bot-bertservice/models/tests/: __init__.py  model_validation.py
komari-bot-bertservice/scripts/: README.md  __init__.py  benchmark.py  download_model.py  generate_training_data.py  health_check.py  process_chat.py
komari-bot-bertservice/tests/: conftest.py
komari-bot-bertservice/tests/fixtures/: test_data.py
komari-bot-bertservice/tests/test_api/: test_endpoints.py
komari-bot-bertservice/tests/test_services/: test_inference_engine.py
komari-bot-bertservice/training/: README.md  __init__.py  export_onnx.py  requirements-train.txt  train.py
komari-bot-bertservice/training/configs/: __init__.py  default.yaml
